--- a/Examples/SearchUI/index.html
+++ b/Examples/SearchUI/index.html
@@ -21,66 +21,76 @@
         <div class=" row">
             <div class="col-md-3">
                 <input type="text" class="form-control" placeholder="Search..." x-ng-model="ctrl.request.keyWord" x-ng-change="ctrl.search()">
-                <h5 class="sub-header">Facet #1</h5>
-                <ul class="nav nav-sidebar">
-                    <li><a href="#">Item#1</a></li>
-                    <li><a href="#">Item#2</a></li>
-                    <li><a href="#">Item#3</a></li>
-                </ul>
-                <h5 class="sub-header">Facet #2</h5>
-                <ul class="nav nav-sidebar">
-                    <li><a href="#">Item#1</a></li>
-                    <li><a href="#">Item#2</a></li>
-                    <li><a href="#">Item#3</a></li>
-                </ul>
+                <div x-ng-repeat="(key,value) in ctrl.result.facets.query">
+                    <h5 class="sub-header">{{key}} ({{value}})</h5>
+                </div>
+                <div x-ng-repeat="facet in ctrl.result.facets.field">
+                    <h5 class="sub-header">{{facet.Name}}</h5>
+                    <ul class="nav nav-sidebar">
+                        <li x-ng-repeat="(key,value) in facet.Data">
+                            <a href="#">{{key}} ({{value}})</a>
+                        </li>
+                    </ul>
+                </div>
+                <div x-ng-repeat="facet in ctrl.result.facets.range">
+                    <h5 class="sub-header">{{facet.Name}}</h5>
+                    <ul class="nav nav-sidebar">
+                        <li x-ng-repeat="(key,value) in facet.Data">
+                            <a href="#">{{key}} ({{value}})</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="col-md-9">
                 <div class="panel panel-default">
-                    <table class="table table-condensed table-hover table-striped">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Name</th>
-                                <th>Manufacturer</th>
-                                <th>Price</th>
-                                <th>Popularity</th>
-                                <th>InStock</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="document in ctrl.result.documents">
-                                <th scope="row">{{document.Id}}</th>
-                                <td>{{document.Name}}</td>
-                                <td>{{document.Manufacturer}}</td>
-                                <td>{{document.Price}}</td>
-                                <td>{{document.Popularity}}</td>
-                                <td>
-                                    <input type="checkbox" disabled="disabled" ng-model="document.InStock">
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <div class="panel-footer text-center">
-                        <nav>
-                            <ul class="pagination">
-                                <li>
-                                    <a href="#" aria-label="Previous">
-                                        <span aria-hidden="true">&laquo;</span>
-                                    </a>
-                                </li>
-                                <li><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                                <li>
-                                    <a href="#" aria-label="Next">
-                                        <span aria-hidden="true">&raquo;</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
+                    <div class="panel-body">
+                        <strong>{{ctrl.result.statistic.documentCount}}</strong> documents found in <strong>{{ctrl.result.statistic.timeToExecution}}</strong>
                     </div>
+                </div>
+                <table class="table table-condensed table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Name</th>
+                            <th>Manufacturer</th>
+                            <th>Price</th>
+                            <th>Popularity</th>
+                            <th>InStock</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="document in ctrl.result.documents">
+                            <th scope="row">{{document.Id}}</th>
+                            <td>{{document.Name}}</td>
+                            <td>{{document.Manufacturer}}</td>
+                            <td>{{document.Price}}</td>
+                            <td>{{document.Popularity}}</td>
+                            <td>
+                                <input type="checkbox" disabled="disabled" ng-model="document.InStock">
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <div class="panel-footer text-center" ng-visible="ctrl.canNavigate()">
+                    <nav>
+                        <ul class="pagination">
+                            <li ng-class="{disabled: ctrl.canNavigateToPreviousPage()}">
+                                <a href="#" aria-label="Previous">
+                                    <span aria-hidden="true">
+                                        &laquo;
+                                    </span>
+                                </a>
+                            </li>
+                            <li x-ng-repeat="i in ctrl.pageRange()" ng-class="{active: ctrl.request.page==i}">
+                                <a href="#">{{i}}</a>
+                            </li>
+                            <li ng-class="{disabled: ctrl.canNavigateToNextPage()}">
+                                <a href="#" aria-label="Next">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
